--- a/CoreAdmChamepe/Views/Home/Index.cshtml
+++ b/CoreAdmChamepe/Views/Home/Index.cshtml
@@ -17,7 +17,14 @@
     <div class="col-md-4">
         <div class="thumbnail">
             <a href="@Url.Action("Create","ParticipanteEventoes", new { eventoId = 1})">
-                <img src="~/Imagens/setorial 01.jpg" alt="Lights" style="width:100%">
+                <img src="~/Imagens/setorial 01.jpeg" alt="Lights" style="width:100%">                
+            </a>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="thumbnail">
+            <a href="@Url.Action("Create","ParticipanteEventoes", new { eventoId = 1})">
+                <img src="~/Imagens/setorial 02.jpeg" alt="Lights" style="width:100%">
 
             </a>
         </div>
@@ -25,15 +32,7 @@
     <div class="col-md-4">
         <div class="thumbnail">
             <a href="@Url.Action("Create","ParticipanteEventoes", new { eventoId = 1})">
-                <img src="~/Imagens/setorial 02.jpg" alt="Lights" style="width:100%">
-
-            </a>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="thumbnail">
-            <a href="@Url.Action("Create","ParticipanteEventoes", new { eventoId = 1})">
-                <img src="~/Imagens/setorial 03.jpg" alt="Lights" style="width:100%">
+                <img src="~/Imagens/setorial 03.jpeg" alt="Lights" style="width:100%">
 
             </a>
         </div>
