--- a/CoreAdmChamepe/Views/ParticipanteEventoes/Create.cshtml
+++ b/CoreAdmChamepe/Views/ParticipanteEventoes/Create.cshtml
@@ -102,13 +102,13 @@
                 <div>
                     @if (ViewBag.Evento == 1)
                     {
-                        <img src="~/Imagens/setorial 01.jpg" alt="img-rounded" style="width:70%">
+                        <img src="~/Imagens/setorial 01.jpeg" alt="img-rounded" style="width:70%">
                     }@if (ViewBag.Evento == 2)
                     {
-                        <img src="~/Imagens/setorial 02.jpg" alt="img-rounded" style="width:70%">
+                        <img src="~/Imagens/setorial 02.jpeg" alt="img-rounded" style="width:70%">
                     }@if (ViewBag.Evento == 3)
                     {
-                        <img src="~/Imagens/setorial 03.jpg" alt="img-rounded" style="width:70%">
+                        <img src="~/Imagens/setorial 03.jpeg" alt="img-rounded" style="width:70%">
                     }
 
                 </div>
