--- a/CoreAdmChamepe/Views/ParticipanteEventoes/Index.cshtml
+++ b/CoreAdmChamepe/Views/ParticipanteEventoes/Index.cshtml
@@ -5,12 +5,16 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<a href="@Url.Action("Index","Home")">
-    Cadastrar
+<a class="btn btn-primary btn-sm" href="@Url.Action("Index","Home")">
+   Adicionar <span class="glyphicon glyphicon-plus"></span>
 </a>
-
 <link href="~/Content/dataTables/jquery.dataTables.min.css" rel="stylesheet" />
 <link href="~/Content/dataTables/buttons.dataTables.min.css" rel="stylesheet" />
+<style>
+    td{
+        font-size:12px
+    }
+</style>
 
 <table class="table table-striped table-responsive">
     <thead>
@@ -32,21 +36,24 @@
                 <td>@item.PartcipanteNomeCompleto</td>
                 <td>@item.ParticipanteRg</td>
                 <td>@item.ParticipanteEmail</td>
-                <td>@item.ParticipanteTelefone)</td>
+                <td>@item.ParticipanteTelefone</td>
                 <td>@item.ParticipanteIdade</td>
                 <td>@item.Evento.EventoDescricao</td>
                 <td>@item.Igreja.IgrejaDescricao</td>
                 <td>
-                    @Html.ActionLink("Editar", "Edit", new { id = item.ParticipanteEventoId }) |
-                    @Html.ActionLink("Detalhar", "Details", new { id = item.ParticipanteEventoId }) |
-                    @Html.ActionLink("Excluir", "Delete", new { id = item.ParticipanteEventoId })
+                    <a class="btn btn-xs btn-primary" href="@Url.Action("Edit","ParticipanteEventoes", new {id = item.ParticipanteEventoId })"><i class="glyphicon glyphicon-edit"></i></a>
+                    <a class="btn btn-xs btn-success" href="@Url.Action("Details","ParticipanteEventoes", new {id = item.ParticipanteEventoId })"><i class="glyphicon glyphicon-eye-open"></i></a>
+                    <a class="btn btn-xs btn-danger" href="@Url.Action("Delete","ParticipanteEventoes", new {id = item.ParticipanteEventoId })"><i class="glyphicon glyphicon-remove"></i></a>                   
                 </td>
             </tr>
         }
-        <tr>
-            <td colspan="9"><strong>TOTAL GERAL DE INSCRITOS:</strong> @ViewBag.TotalGeralPessoasCadastradas</td>
-        </tr>
+       
     </tbody>
+    <tfoot>
+        <tr>
+            <td colspan="8"><strong>TOTAL GERAL DE INSCRITOS (TODOS OS EVENTOS):</strong> @ViewBag.TotalGeralPessoasCadastradas</td>
+        </tr>
+    </tfoot>
 </table>
 
 @section Scripts{
@@ -62,7 +69,10 @@
     <script>
         $(function () {
             $('table').DataTable({
-                dom: 'Bfrtip',
+                dom: "<'row'<'form-inline' <'col-sm-offset-5'B>>>"
+                    + "<'row'<'col-sm-12 col-md-6'l><'col-sm-12 col-md-6'f>>"
+                    + "<'row'<'col-sm-12'tr>>"
+                    + "<'row'<'col-sm-12 col-md-5'i><'col-sm-12 col-md-7'p>>",
                 buttons: [
                     {
                         extend: 'excelHtml5',
