--- a/CoreAdmChamepe/Views/ParticipanteEventoes/Create.cshtml
+++ b/CoreAdmChamepe/Views/ParticipanteEventoes/Create.cshtml
@@ -74,7 +74,7 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.IgrejaId, "IgrejaId", htmlAttributes: new { @class = "control-label col-md-3" })
+                        @Html.LabelFor(model => model.IgrejaId, "Igreja", htmlAttributes: new { @class = "control-label col-md-3" })
                         <div class="col-md-9">
                             @Html.DropDownList("IgrejaId", null, htmlAttributes: new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.IgrejaId, "", new { @class = "text-danger" })
@@ -82,7 +82,7 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.EventoId, "EventoId", htmlAttributes: new { @class = "control-label col-md-3" })
+                        @Html.LabelFor(model => model.EventoId, "Evento", htmlAttributes: new { @class = "control-label col-md-3" })
                         <div class="col-md-9">
                             <input type="hidden" value="@ViewBag.Evento" name="EventoId" id="EventoId" />
                             @Html.DropDownList("EventoId", null, htmlAttributes: new { @class = "form-control" })
